--- a/main.ipynb
+++ b/main.ipynb
@@ -481,7 +481,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All numerical data has high positive Skew"
+    "# Data Skew Result\n",
+    "All numerical data has high positive Skew meaning that the values are greatly over represented by outliers. Also the mean and median are much higher than the mode."
    ]
   },
   {
@@ -575,7 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the data is a lot more normally distributed and prepared for any ML algorithms"
+    "Now the data is a lot more normally distributed and prepared for linear-regression, k-nearest neighbours and SVM algorithms. Some results like total_accounts and open_accounts appear more discretely represented."
    ]
   },
   {
@@ -1284,14 +1285,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Result\n",
+    "# Loss prediction result\n",
     "\n",
     "\n",
     "### Correlation Matrix\n",
     "As we can see the correlation matrix shows little significance between loan_status and any other forseen factors so we are not going to take a subset of charged off customers to further dig into the data.\n",
     "\n",
     "### Chi-Squared Test\n",
-    "Chi-Squared Test shows an extremely high statistic and a p-value of 0 suggesting that there is significant difference between any potential indicator columns\n"
+    "Chi-Squared Test shows an extremely high statistic and a p-value of 0 suggesting that there is significant difference between any potential indicator columns"
    ]
   }
  ],
